[tool.poetry]
name = "webdash"
version = "0.1.0"
description = ""
authors = ["maaki <maaki@duck.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
flask = "^3.0.3"
flask-socketio = "^5.4.1"
gunicorn = "^23.0.0"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"
aiohttp = ">=3.11.8"
cryptography = ">=43.0.3"
undetected-chromedriver = ">=3.5.5"
selenium = ">=4.27.1"
gpsoauth = ">=1.1.1"
requests = ">=2.32.3"
beautifulsoup4 = ">=4.12.3"
pyscrypt = ">=1.6.2"
pycryptodomex = ">=3.21.0"
ecdsa = ">=0.19.0"
pytz = ">=2024.2"
protobuf = ">=5.28.3"
frida = ">=16.5.6"
httpx = ">=0.28.0"
h2 = ">=4.1.0"
setuptools = ">=75.6.0"
http-ece = ">=1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
